# accord

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  flake.nix
.github/workflows/: build-and-push.yml  edge.yml  latest-tagged.yml
accorde-server/: Cargo.toml
accorde-server/.sqlx/: query-45ed1057065be2ef592c4c8e1300ebf7b7b330cf28992c7c19d9ef52bb0aaa0e.json  query-c427266a753479ca49e48f29b7c62b6654e8be2aedc6a16d69e4dff729e728ed.json  query-ea106cab643f1d68b8b4eae7d241d053ea2affbef6bd009c9120a0e79cf5f9ba.json
accorde-server/migrations/: 20240921125403_processes.sql  20240921132003_sqlxmq.sql
accorde-server/src/: lib.rs  macros.rs  main.rs  primitives.rs
accorde-server/src/app/: config.rs  mod.rs
accorde-server/src/cli/: config.rs  mod.rs
accorde-server/src/graphql/: mod.rs  process.rs  schema.rs
accorde-server/src/job/: error.rs  executor.rs  mod.rs
accorde-server/src/process/: commands.rs  config.rs  error.rs  mod.rs
accorde-server/src/server/: config.rs  mod.rs
frontend/: codegen.yml  env.ts  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: all-processes.tsx  all-tracks.tsx  loading.tsx  submit-process.tsx  submit-track.tsx  track.tsx
frontend/lib/: utils.ts
server/.sqlx/: query-129172d7884ab53533d8eecfae200a86fef56b178ee3175b54e15d9779287b88.json  query-2ba7590be2219e354c735674569cdce5ce374ec9278d81626d212ab791881302.json  query-32e011d54283d9630e47d497c844144b402f5c451313ee837d0b5b788c3794e3.json  query-5c1367b6f84248867807f3e14906f41e6ac0b946b0fe52e4de7fbd4d7754314c.json  query-603c900d39c07af5fd2ca722e33ea2cfb831c029dcab1a7547132cc6389ef841.json  query-6ac76bbf4caf527b0f8d4fba73dc36831b3451adc89bcde9047ff7eced5cdef9.json  query-7066e9f9aa760ea9e3e994a9ffd12b1849cab58bcd76c20077cddf38d2421266.json  query-73ad2ef181fb5807f075207f28afe6897b8fb44c459984afee90f86faa43c48a.json  query-98043326b7cf4bc0ee66963f15e0c87251f9866362d7b1cd90a8a54daaecf6a0.json  query-a58c77c39f2fe2fa1c71cf2d711bf4974d9608dd1d999809dfb6163df44ccd43.json  query-c427266a753479ca49e48f29b7c62b6654e8be2aedc6a16d69e4dff729e728ed.json  query-c90367065944c03f9d5e185c846347949f13c0dd3a44f7590aa540fe487e2066.json  (+6 more)
(+36 files in other folders)
