[workspace]
resolver = "2"
members = ["accorde-server"]

[workspace.dependencies]
anyhow = "1.0.86"
async-graphql = { version = "7.0.7", default-features = false, features = ["dataloader", "tracing", "chrono", "playground"] }
async-graphql-axum = "7.0.7"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", default-features = false, features = ["tracing", "typed-header"] }
chrono = { version = "0.4.31", features = ["clock", "serde"], default-features = false }
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
derive_builder = "0.20.0"
futures = "0.3.30"
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono", "json" ] }
sqlxmq = { version = "0.5.0", default-features = false, features = ["runtime-tokio-rustls"] }
thiserror = "1.0.63"
uuid = { version = "1.10", features = ["serde", "v4"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.32"
serde_json = "1.0.128"
serde_with = "3.9.0"
rust_decimal_macros = "1.36.0"
rust_decimal = "1.36.0"
url = { version = "2.5.2", features = ["serde"] }
